--- a/roles/tomcat/vars/main.yml
+++ b/roles/tomcat/vars/main.yml
@@ -1,31 +1,27 @@
 ---
 # vars file for tomcat85
-{ "tomcat": {
-    "con1": {
-      "name": "Catalina1",
-      "defaulthost": "localhost",
-      "jvmRoute": "tomcat1",
-      "appBase": "/wasapp", # Could be input
-      "docBase": "/test", # Could be input
-      "contextPath": "", # Could be input
-      "home": "{{ tomcat.home }}/con1",
-      "log_home": "{{ tomcat.log_home }}/con1",
-      "port": 8088,
-      "min_threads": 20,
-      "max_threads": 200
-    },
-    "con2": {
-      "name": "Catalina1",
-      "defaulthost": "localhost",
-      "jvmRoute": "tomcat1",
-      "appBase": "/wasapp", # Could be input
-      "docBase": "/test", # Could be input
-      "contextPath": "", # Could be input
-      "home": "{{ tomcat.home }}/con2",
-      "log_home": "{{ tomcat.log_home }}/con2",
-      "port": 8088,
-      "min_threads": 20,
-      "max_threads": 200
-    },
-  }
-}
+tomcat:
+  con1:
+    name: Catalina1
+    defaulthost: localhost
+    jvmRoute: tomcat1
+    appBase: /wasapp    # Could be input
+    docBase: /test    # Could be input
+    contextPath:      # Could be input
+    home: "{{ tomcat_home }}/con1"
+    log_home: "{{ tomcat_log_home }}/con1"
+    port: 8088
+    min_threads: 20
+    max_threads: 200
+  con2:
+    name: Catalina2
+    defaulthost: localhost
+    jvmRoute: tomcat2
+    appBase: /wasapp    # Could be input
+    docBase: /test    # Could be input
+    contextPath:      # Could be input
+    home: "{{ tomcat_home }}/con2"
+    log_home: "{{ tomcat_log_home }}/con2"
+    port: 8088
+    min_threads: 20
+    max_threads: 200
