--- a/roles/tomcat/defaults/main.yml
+++ b/roles/tomcat/defaults/main.yml
@@ -1,9 +1,8 @@
 ---
 # defaults file for tomcat85
-{ "tomcat": {
-    "version": "apache-tomcat-8.5.43",
-    "home": "/was/apache-tomcat-8.5.43",
-    "log_home": "/logfs/apache-tomcat-8.5.43"
-  }
-}
-
+tomcat_install_home: /was
+tomcat_version: apache-tomcat-8.5.43 # Must be exact given name(apache-tomcat-X.X.XX)
+tomcat_home: "{{ tomcat_install_home }}/{{ tomcat_version }}"
+tomcat_log_home: "/logfs/{{ tomcat_home }}"
+java_version: java-1.7.0-openjdk
+java_home: /usr/lib/jvm/java-1.7.0-openjdk-1.7.0.231-2.6.19.1.el7_6.x86_64 # Must get the path dynamically
