Edit con1, con2.yml

--- a/roles/tomcat/tasks/con1.yml
+++ b/roles/tomcat/tasks/con1.yml
@@ -24,3 +24,4 @@
   template:
     src: logging.properties.j2
     dest: "{{ tomcat.con1.home }}/conf/logging.properties"
+#- name: Start Tomcat Container1
